Deploy Wookie with Rave using latest release version
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1292750 13f79535-47bb-0310-9956-ffa450edef68